Global Bias Term

--- a/src/5.3_surprise.ipynb
+++ b/src/5.3_surprise.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 18,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.107343Z",
-     "start_time": "2018-02-24T02:14:23.422760Z"
+     "end_time": "2018-02-24T02:17:26.628917Z",
+     "start_time": "2018-02-24T02:17:26.549916Z"
     }
    },
    "outputs": [],
@@ -21,17 +21,17 @@
     "from surprise import Dataset\n",
     "from surprise.model_selection import train_test_split\n",
     "from surprise.model_selection import cross_validate\n",
-    "from adjustText import adjust_text\n",
+    "#from adjustText import adjust_text\n",
     "%matplotlib inline\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.172172Z",
-     "start_time": "2018-02-24T02:14:24.112076Z"
+     "end_time": "2018-02-24T02:17:26.701366Z",
+     "start_time": "2018-02-24T02:17:26.632519Z"
     }
    },
    "outputs": [
@@ -105,7 +105,7 @@
        "4      166       346       1"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,11 +119,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.218255Z",
-     "start_time": "2018-02-24T02:14:24.176490Z"
+     "end_time": "2018-02-24T02:17:26.756892Z",
+     "start_time": "2018-02-24T02:17:26.704439Z"
     }
    },
    "outputs": [
@@ -322,7 +322,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,11 +338,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 21,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.247586Z",
-     "start_time": "2018-02-24T02:14:24.223124Z"
+     "end_time": "2018-02-24T02:17:26.784367Z",
+     "start_time": "2018-02-24T02:17:26.763134Z"
     }
    },
    "outputs": [
@@ -416,7 +416,7 @@
        "4      854       514       4"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -430,11 +430,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.306608Z",
-     "start_time": "2018-02-24T02:14:24.253211Z"
+     "end_time": "2018-02-24T02:17:26.845596Z",
+     "start_time": "2018-02-24T02:17:26.788561Z"
     }
    },
    "outputs": [
@@ -508,7 +508,7 @@
        "4      298       474       4"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -522,11 +522,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 23,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:24.626983Z",
-     "start_time": "2018-02-24T02:14:24.311390Z"
+     "end_time": "2018-02-24T02:17:27.136809Z",
+     "start_time": "2018-02-24T02:17:26.850082Z"
     }
    },
    "outputs": [],
@@ -544,21 +544,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 24,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:27.230195Z",
-     "start_time": "2018-02-24T02:14:24.631424Z"
+     "end_time": "2018-02-24T02:17:29.769706Z",
+     "start_time": "2018-02-24T02:17:27.140648Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x109145ad0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x10dbf6c50>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -572,11 +572,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 25,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:27.338967Z",
-     "start_time": "2018-02-24T02:14:27.234324Z"
+     "end_time": "2018-02-24T02:17:29.958317Z",
+     "start_time": "2018-02-24T02:17:29.774056Z"
     }
    },
    "outputs": [],
@@ -586,11 +586,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:27.365443Z",
-     "start_time": "2018-02-24T02:14:27.344106Z"
+     "end_time": "2018-02-24T02:17:29.992414Z",
+     "start_time": "2018-02-24T02:17:29.964951Z"
     },
     "scrolled": false
    },
@@ -599,16 +599,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RMSE: 0.9149\n"
+      "RMSE: 0.9271\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "0.91492770877198248"
+       "0.92711257470944308"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,11 +619,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 27,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:27.384171Z",
-     "start_time": "2018-02-24T02:14:27.370678Z"
+     "end_time": "2018-02-24T02:17:30.011292Z",
+     "start_time": "2018-02-24T02:17:29.997348Z"
     }
    },
    "outputs": [
@@ -633,11 +633,11 @@
      "text": [
       "Matrix Shapes:\n",
       "U: (943, 20)\n",
-      "V: (1665, 20)\n",
+      "V: (1668, 20)\n",
       "U Bias: (943,)\n",
-      "V Bias: (1665,)\n",
+      "V Bias: (1668,)\n",
       "Train Set Users: 943\n",
-      "Train Set Items: 1665\n",
+      "Train Set Items: 1668\n",
       "Train Set Ratings: 90000\n",
       "Test Set Len: 10000\n"
      ]
@@ -661,11 +661,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 28,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:28.238510Z",
-     "start_time": "2018-02-24T02:14:27.388916Z"
+     "end_time": "2018-02-24T02:17:31.331738Z",
+     "start_time": "2018-02-24T02:17:30.017719Z"
     }
    },
    "outputs": [
@@ -693,11 +693,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:28.528688Z",
-     "start_time": "2018-02-24T02:14:28.243025Z"
+     "end_time": "2018-02-24T02:17:31.750090Z",
+     "start_time": "2018-02-24T02:17:31.336845Z"
     }
    },
    "outputs": [
@@ -705,8 +705,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1665, 20) (20, 20)\n",
-      "(1665, 2)\n"
+      "(1668, 20) (20, 20)\n",
+      "(1668, 2)\n"
      ]
     }
    ],
@@ -740,11 +740,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 30,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:28.541151Z",
-     "start_time": "2018-02-24T02:14:28.533510Z"
+     "end_time": "2018-02-24T02:17:31.762231Z",
+     "start_time": "2018-02-24T02:17:31.756063Z"
     }
    },
    "outputs": [],
@@ -757,26 +757,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 31,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:29.436684Z",
-     "start_time": "2018-02-24T02:14:28.546103Z"
+     "end_time": "2018-02-24T02:17:31.999601Z",
+     "start_time": "2018-02-24T02:17:31.764992Z"
     }
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/System/Library/Frameworks/Python.framework/Versions/2.7/Extras/lib/python/matplotlib/collections.py:548: FutureWarning: elementwise comparison failed; returning scalar instead, but in the future will perform elementwise comparison\n",
-      "  if self._edgecolors == 'face':\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1065e1fd0>"
+       "<matplotlib.figure.Figure at 0x10a7e9a10>"
       ]
      },
      "metadata": {},
@@ -789,8 +781,9 @@
     "plt.scatter(x[2:12], y[2:12])\n",
     "texts = []\n",
     "for j, txt in enumerate(movie_names[2:12]):\n",
-    "    texts.append(plt.text(x[2:12][j], y[2:12][j], txt))\n",
-    "adjust_text(texts)\n",
+    "    #texts.append(plt.text(x[2:12][j], y[2:12][j], txt))\n",
+    "    plt.annotate(txt, (x[j], y[j]))\n",
+    "#adjust_text(texts)\n",
     "plt.xlabel('Feature 0')\n",
     "plt.ylabel('Feature 1')\n",
     "plt.title('10 Movies of Our Choice')\n",
@@ -800,11 +793,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 32,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:30.228155Z",
-     "start_time": "2018-02-24T02:14:29.440986Z"
+     "end_time": "2018-02-24T02:17:32.238258Z",
+     "start_time": "2018-02-24T02:17:32.004102Z"
     }
    },
    "outputs": [
@@ -819,7 +812,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d90db50>"
+       "<matplotlib.figure.Figure at 0x10f682a90>"
       ]
      },
      "metadata": {},
@@ -860,11 +853,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:30.491363Z",
-     "start_time": "2018-02-24T02:14:30.232541Z"
+     "end_time": "2018-02-24T02:17:32.512797Z",
+     "start_time": "2018-02-24T02:17:32.242617Z"
     }
    },
    "outputs": [
@@ -878,7 +871,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d904b50>"
+       "<matplotlib.figure.Figure at 0x10f6c3710>"
       ]
      },
      "metadata": {},
@@ -915,18 +908,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 34,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-02-24T02:14:30.891962Z",
-     "start_time": "2018-02-24T02:14:30.497410Z"
+     "end_time": "2018-02-24T02:17:32.957883Z",
+     "start_time": "2018-02-24T02:17:32.518174Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x10d90b490>"
+       "<matplotlib.figure.Figure at 0x10a7e90d0>"
       ]
      },
      "metadata": {},
